# stocktrim-openapi-client

./: .cursorrules  .gitignore  .harness-lock.json  .mcp.json  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  MIGRATION_PROGRESS.md  README.md  STOCKTRIM_API_FEEDBACK.md  mkdocs.yml  pyproject.toml  stocktrim-openapi.yaml
.claude/: settings.json
.claude/agents/: code-reviewer.md  domain-advisor.md  project-manager.md  test-writer.md  verifier.md
.claude/skills/add-helper-method/: SKILL.md
.claude/skills/add-mcp-tool/: SKILL.md
.claude/skills/add-nullable-field/: SKILL.md
.claude/skills/code-reviewer/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/feature-spec/: SKILL.md
.claude/skills/open-pr/: SKILL.md  ensure-feature-branch.sh  poll-ci.sh  poll-review.sh
.claude/skills/quality-gate/: SKILL.md
.claude/skills/regenerate-client/: SKILL.md
.claude/skills/shared/: discover-verification-cmd.sh  fetch-pr-context.sh  hook-file-path.sh  is-branch-shared.sh  markdownlint-fix.sh  resolve-all-threads.sh  resolve-github-context.sh  resolve-thread.sh  validate-hooks-schema.sh
.claude/skills/skill-writer/: SKILL.md
.claude/skills/standup/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
docs/: CHANGELOG.md  POETRY_USAGE.md  conf.py  index.md
docs/architecture/: logging.md
docs/contributing/: api-feedback.md  development.md  tool-documentation-guide.md
docs/getting-started/: quickstart.md
docs/investigations/: tool_documentation_analysis.md
docs/mcp-server/: examples.md  observability.md  prompts.md  tools.md
docs/user-guide/: client-guide.md  testing.md
scripts/: regenerate_client.py  test_delete_status.py
stocktrim_mcp_server/: CHANGELOG.md  README.md  pyproject.toml
stocktrim_mcp_server/src/stocktrim_mcp_server/: context.py  server.py  utils.py
stocktrim_mcp_server/src/stocktrim_mcp_server/prompts/: workflows.py
stocktrim_mcp_server/src/stocktrim_mcp_server/resources/: foundation.py  reports.py
stocktrim_mcp_server/src/stocktrim_mcp_server/services/: __init__.py  customers.py  locations.py  products.py  purchase_orders.py  sales_orders.py
stocktrim_mcp_server/src/stocktrim_mcp_server/templates/: __init__.py  urgent_orders_review.md.j2
stocktrim_mcp_server/src/stocktrim_mcp_server/templates/workflows/urgent_orders/: review.md.j2
stocktrim_mcp_server/src/stocktrim_mcp_server/tools/: __init__.py  inventory.py  tool_result_utils.py
stocktrim_mcp_server/src/stocktrim_mcp_server/tools/foundation/: __init__.py  inventory.py  locations.py  products.py  purchase_orders.py  sales_orders.py  suppliers.py
stocktrim_mcp_server/src/stocktrim_mcp_server/tools/workflows/: __init__.py  forecast_management.py  product_management.py  supplier_onboarding.py  urgent_orders.py
stocktrim_mcp_server/tests/: conftest.py  test_caching.py  test_observability.py  test_utils.py
stocktrim_mcp_server/tests/test_prompts/: test_workflows.py
stocktrim_mcp_server/tests/test_services/: __init__.py  test_customers.py  test_inventory.py  test_locations.py  test_suppliers.py
stocktrim_mcp_server/tests/test_tools/test_foundation/: __init__.py  test_products.py  test_purchase_orders.py  test_sales_orders.py
stocktrim_mcp_server/tests/test_tools/test_workflows/: test_forecast_management.py  test_product_management.py  test_supplier_onboarding.py  test_urgent_orders.py
stocktrim_public_api_client/: __init__.py  stocktrim_client.py
stocktrim_public_api_client/helpers/: __init__.py  customers.py  forecasting.py  inventory.py  locations.py  order_plan.py  products.py  purchase_orders.py  purchase_orders_v2.py  sales_orders.py  suppliers.py
tests/: conftest.py  test_documentation.py  test_helpers.py  test_purchase_order_upsert.py  test_stocktrim_client.py  test_trace_logging.py  test_utils.py
